--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
 
-    <section class="banner">
+    <section class="section banner">
       <div class="banner__left">
         <p class="banner__heading">
           Hi. I am <br />
@@ -33,8 +33,8 @@
         </p>
         <p class="banner__job">Frontend Developer</p>
         <div class="row">
-          <button class="button--primary">Download CV</button>
-          <button class="button--secondary">Learn More</button>
+          <button class="button button--primary">Download CV</button>
+          <button class="button button--secondary">Learn More</button>
         </div>
       </div>
       <div class="banner__right">
@@ -46,8 +46,8 @@
       </div>
     </section>
 
-    <section class="about">
-      <h3 class="about__heading">About</h3>
+    <section class="section about">
+      <h3 class="section__heading">About</h3>
       <p class="about__desc">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia,
         non quae minus iste autem asperiores omnis reiciendis error ea adipisci
@@ -75,6 +75,45 @@
           <div></div>
           <p>Phone</p>
           <span>Your name goes here</span>
+        </li>
+      </ul>
+    </section>
+    <section class="section feature">
+      <h3 class="section__heading">What I do</h3>
+      <il class="feature__list">
+        <li class="feature__items">
+          <img src="./assets/images/feature1.svg" alt="">
+          <p>Software Development</p>
+        </li>
+        <li class="feature__items feature__item--highlight">
+          <img src="./assets/images/feature2.svg" alt="">
+          <p>Web Development</p>
+        </li>
+        <li class="feature__items">
+          <img src="./assets/images/feature3.svg" alt="">
+          <p>Web <br> Design</p>
+        </li>
+      </il>
+    </section>
+    <section class="section skill">
+
+      <h3 class="section__heading">My Skills</h3>
+      <ul class="skill__list">
+        <li class="skill__items">
+          <span>50%</span>
+          <p>HTML</p>
+        </li>
+        <li class="skill__items">
+          <span>20%</span>
+          <p>CSS</p>
+        </li>
+        <li class="skill__items">
+          <span>10%</span>
+          <p>Javascript</p>
+        </li>
+        <li class="skill__items">
+          <span>2%</span>
+          <p>PHP</p>
         </li>
       </ul>
     </section>
