--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -117,5 +117,28 @@
         </li>
       </ul>
     </section>
+
+    <section class="section contact">
+      <h3 class="section__heading">Get in touch</h3>
+      <ul class="contact__list">
+        <li class="contact__items">
+          <input type="text" placeholder="First name" class="contact__input">
+        </li>
+        <li class="contact__items">
+          <input type="text" placeholder="Last name" class="contact__input">
+        </li>
+        <li class="contact__items">
+          <input type="text" placeholder="Email" class="contact__input">
+        </li>
+        <li class="contact__items">
+          <input type="text" placeholder="Password" class="contact__input">
+        </li>
+      </ul>
+      <textarea class="contact__textarea" placeholder = "Message" cols="30" rows="10"></textarea>
+      <button class="button button--primary">Submit now</button>
+    </section>
+    <footer>
+      <p>© Oyindamola 2020</p>
+    </footer>
   </body>
 </html>
