--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -147,7 +147,7 @@
           <input type="text" placeholder="Email" class="contact__input" />
         </li>
         <li class="contact__items">
-          <input type="text" placeholder="Password" class="contact__input" />
+          <input type="password" placeholder="Password" class="contact__input" />
         </li>
       </ul>
       <textarea
