--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -25,6 +25,12 @@
             <li class="nav__item"><a href="">Contact me</a></li>
           </ul>
         </nav>
+        <div class="hamburger">
+          <div class="hamburger__item"></div>           
+          <div class="hamburger__item"></div>           
+          <div class="hamburger__item"></div>           
+          
+        </div>
       </header>
     </div>      
 
