--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -29,7 +29,7 @@
           <div class="hamburger__item"></div>           
           <div class="hamburger__item"></div>           
           <div class="hamburger__item"></div>           
-          
+        
         </div>
       </header>
     </div>      
@@ -167,5 +167,6 @@
     <footer>
       <p>© Oyindamola 2020</p>
     </footer>
+    <script src="./main.js"></script>
   </body>
 </html>
