--- a/portfolio/Index.html
+++ b/portfolio/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,9 +27,9 @@
           </ul>
         </nav>
         <div class="hamburger">
-          <div class="hamburger__item"></div>           
-          <div class="hamburger__item"></div>           
-          <div class="hamburger__item"></div>           
+          <div class="hamburger__item1"></div>           
+          <div class="hamburger__item2"></div>           
+          <div class="hamburger__item3"></div>           
         
         </div>
       </header>
